[package]
name = "starla-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
starla-common = { path = "../starla-common", version = "6000.0.0" }
tokio = { workspace = true }
tokio-util = { workspace = true }
russh = { workspace = true }
russh-keys = { workspace = true }
ssh-key = { version = "0.6", features = ["ed25519"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
hostname = "0.4.2"
