[package]
name = "starla-database"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
starla-common = { path = "../starla-common", version = "6000.0.0" }
rocksdb = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.24"
tokio = { workspace = true, features = ["test-util"] }
