[package]
name = "starla-measurements"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
starla-common = { path = "../starla-common", version = "6000.0.0" }
starla-network = { path = "../starla-network", version = "6000.0.0" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hickory-resolver = { workspace = true }
hickory-client = { workspace = true }
hickory-proto = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
x509-parser = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
socket2 = { workspace = true }
pnet = { workspace = true }
pnet_packet = { workspace = true }
webpki-roots = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
